# SudokuSolverRust

standard-constraints/: Cargo.toml
standard-constraints/src/: lib.rs  prelude.rs  thermometer_constraint.rs
sudoku-solver-console/: Cargo.toml
sudoku-solver-console/src/: main.rs
sudoku-solver-lib/: Cargo.toml
sudoku-solver-wasm/: Cargo.toml
