[package]
name = "sudoku-solver-console"
authors = ["Rangsk (David Clamage)"]
description = "Sudoku variant solver utility."
repository = "https://github.com/dclamage/SudokuSolverRust"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku-solver-lib = { path = "../sudoku-solver-lib" }
standard-constraints = { path = "../standard-constraints" }
clap = { version = "4.1.1", features = ["derive", "help", "usage", "error-context", "wrap_help"] }
colored = "2.0.0"
tokio = { version= "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
warp = "0.3.3"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
futures = { version = "0.3.25", default-features=false, features = ["executor"]}
uuid = { version = "1.2.2", features = ["v4", "serde"] }
